# SiteScanner

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  PRE_COMMIT_SETUP.md  README.md  coverage.xml  genindex.html  index.html  nmap_scanner.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  nmap_scanner.doctree
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  docs-pages.yml
docs/: conf.py  index.rst  nmap_scanner.rst  triage.md
scripts/: nmap_triage.py  security_bandit_check.py  security_safety_check.py
src/sitescanner/: __init__.py  cli.py  http.py
src/sitescanner/core/: __init__.py  result.py  scanner.py
src/sitescanner/runners/: __init__.py  metasploit_runner.py  nmap_runner.py
src/sitescanner/scanners/: __init__.py  config_check.py  csrf.py  match_rules.json  metasploit_runner.py  metasploit_scanner.py  nmap_metasploit_fuzzy.py  nmap_metasploit_matcher.py  nmap_models.py  nmap_runner.py  nmap_scanner.py  privacy_and_compliance.py  pymetasploit_runner.py  sql_injection.py  xss.py
tests/: __init__.py  conftest.py  conftest_http.py  test_core.py  test_metasploit_scanner.py  test_nmap_metasploit_fuzzy.py  test_nmap_metasploit_matcher.py  test_nmap_scanner.py  test_privacy_additional_checks.py  test_privacy_additional_v2.py  test_privacy_and_compliance.py  test_pymetasploit_runner.py  test_sql_injection.py  test_xss.py
tests/fixtures/nmap/: sample1.xml
