[project]
name = "sitescanner5000"
version = "0.1.0"
description = "Automated security vulnerability scanner for web applications"
authors = [
    {name = "SiteScanner Team", email = "deleterious420+sitescanner5000@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
keywords = ["security", "scanner", "vulnerability", "penetration-testing", "web-security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "click>=8.3.0",
    "logfire>=4.14.2",
    "pydantic>=2.12.3",
    "pymetasploit3>=1.0.6",
    "rapidfuzz>=3.14.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.92.0",
    "mypy>=1.18.2",
    "ruff>=0.14.3",
    "black>=25.9.0",
    "isort>=7.0.0",
    "pre-commit>=4.3.0",
    "bandit>=1.8.6",
    "safety>=3.6.2",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-autodoc-typehints>=3.5.2",
]

[project.scripts]
sitescanner = "sitescanner.cli:cli"

[project.urls]
Homepage = "https://github.com/Magic-Man-us/SiteScanner"
Documentation = "https://github.com/Magic-Man-us/SiteScanner#readme"
Repository = "https://github.com/Magic-Man-us/SiteScanner"
Issues = "https://github.com/Magic-Man-us/SiteScanner/issues"
Changelog = "https://github.com/Magic-Man-us/SiteScanner/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sitescanner"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

# ============================================================================
# pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "-ra",
    "--cov=sitescanner",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-branch",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
]

[tool.coverage.html]
directory = "htmlcov"

# ============================================================================
# mypy Configuration
# ============================================================================
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = ["bs4.*", "aiohttp.*"]
ignore_missing_imports = true

# ============================================================================
# Ruff Configuration
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]
extend-include = ["*.ipynb"]
extend-exclude = ["scripts", "docs"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "PERF",   # perflint
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "B008",    # function calls in argument defaults (Pydantic uses this)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",   # unused imports OK in __init__
]
"tests/**/*.py" = [
    "S101",   # assert allowed in tests
    "PLR2004", # magic values OK in tests
    "ARG",    # unused arguments OK in tests
]

[tool.ruff.lint.isort]
known-first-party = ["sitescanner"]
force-sort-within-sections = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
sitescanner5000 = { workspace = true }

[dependency-groups]
dev = [
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]
